# TDVP_and_QAOA

./: .gitignore  .replit  CITATION.cff  MaxCut.py  README.md  Untitled.ipynb  benchmark.py  benchmarks.ipynb  data_analysis.ipynb  data_processing.ipynb  effectpower.ipynb  grid_search.ipynb  instances.ipynb  load_interactive.py  plots.ipynb  pyproject.toml  qaoa.ipynb  qaoa.py  qaoa_and_tdvp.py  quantum.py  replit.nix  run_bench.py  run_benchmarks (conflicted).ipynb  run_benchmarks.ipynb  run_benchmarks.py  tdvp (conflicted).ipynb  tdvp.ipynb  tdvp.py  tdvp_and_qaoa.ipynb  tdvp_and_qaoa.py  testing.ipynb  testing.py
.devcontainer/: Dockerfile  devcontainer.json
benchmarks/: Euler_p1-5_n4.p.csv  Euler_p1-5_n4.p.p  RK45_n4_p-1-10_Delta-1_benchmarks.csv  RK45_n4_p-1-10_Delta-1_benchmarks.p  RK45_n4_p-1-10_Delta-1_benchmarks.p.csv  RK45_n4_p-1-10_Delta-1_benchmarks.p.p  RK45_n5_p-1-10_Delta-1_benchmarks.p.p  RK45_n7_p-1-10_Delta-1_benchmarks.csv  RK45_n7_p-1-10_Delta-1_benchmarks.p  RK45_n8_p-1-10_Delta-1_benchmarks.csv  RK45_n8_p-1-10_Delta-1_benchmarks.p  new_RK45_n4_p-1-6_Delta-1_benchmarks.csv  new_RK45_n4_p-1-6_Delta-1_benchmarks.p  test.csv  test.p
instances/: n10_instances.p  n10_qubos.p  n10_rn_graphs.p  n3_instances.p  n4_graphs.p  n4_instances.p  n5_graphs.p  n5_instances.p  n6_graphs.p  n6_instances.p  n7_graphs.p  n7_instances.p  n8_instances.p  n9_instances.p  rn_n4_qubos.p  rn_n5_qubos.p  rn_n6_qubos.p  rn_n7_qubos.p  rn_n8_qubos.p  rn_n9_qubos.p  rn_qubos.p
plots/: TDVP_sigmay  grid_seach_n5_p1_i5_landscape.html
results/: data.p  data_gd_cut.p  n4_p1.p  (+48 more)
(+15 files in other folders)
