[tool.poetry]
name = "tdvpandqaoa"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
qutip = "^4.7.0"
plotly = "^5.10.0"
Cython = "^0.29.32"
"latexmk.py" = "^0.4"
latex = "^0.7.0"
matplotlib = "^3.5.3"
pandas = "^1.4.3"
dracula = "^0.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
